feat: 补齐S7-01 RAG语料与chunk证据